--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154613217-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <!-- <script> -->
+        <!-- window.dataLayer = window.dataLayer || []; -->
+        <!-- function gtag(){dataLayer.push(arguments);} -->
+        <!-- gtag('js', new Date()); -->
 
-        gtag('config', 'UA-154613217-1');
-    </script>
+        <!-- gtag('config', 'UA-154613217-1'); -->
+    <!-- </script> -->
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
