--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154613217-1"></script>
-    <!-- <script> -->
-        <!-- window.dataLayer = window.dataLayer || []; -->
-        <!-- function gtag(){dataLayer.push(arguments);} -->
-        <!-- gtag('js', new Date()); -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-        <!-- gtag('config', 'UA-154613217-1'); -->
-    <!-- </script> -->
+        gtag('config', 'UA-154613217-1');
+    </script>
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
 	<button type = "button"  style="width: 125px; margin:5px; display: inline-block;" class="btn btn-lg btn-success" onclick = "sendmove()">Send Move</button>
 	
 	<p> <span id="pgn5"></span></p>
-	
+	<p><b>New feature!</b><a href="https://www.tryit.in/chessnews"> Read mainstream media chess articles here!</a>
 	<p>© vishwas.ib@gmail.com|<a href="https://www.tryit.in"> Home|</a> <a href="https://www.tryit.in/chesstactics"> Tactics|</a> <a href="https://www.tryit.in/audiochess"> Audio Chess|</a> <a href="https://www.tryit.in/blindchess"> Blind Chess  </a></p>
     <script src="js/chessboard-0.3.0.min.js"></script>
 	<script src="js/chess.js"></script>
